Finishing adding the inmemory adapter and refactor tests code to test the hexagon business logic without persistence